fix: note preparation for secondary actors and textarea wrapping for everything

--- a/less/common/inputs.less
+++ b/less/common/inputs.less
@@ -25,7 +25,6 @@
     resize: none;
     border: 1px solid @colorTan;
     background: var(--pf1-bg-dark-0);
-    white-space: nowrap;
     &:hover {
       border: 1px solid #111;
     }
