--- a/less/sheets/actors/trap.less
+++ b/less/sheets/actors/trap.less
@@ -14,6 +14,10 @@
         gap: 3px;
       }
 
+      .effect {
+        display: contents;
+      }
+
       .effects {
         .effect-details {
           flex: 1;
